<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scroll_style">


    <LinearLayout style="@style/normal_layout_attributes">

        <RelativeLayout style="@style/relative_layout_style">


            <ImageView
                style="@style/background_image_standard"
                android:contentDescription="@string/image_header"
                android:src="@drawable/background4" />


            <View style="@style/header_blue_line_bold" />

            <View style="@style/header_blue_line_thin" />

            <LinearLayout style="@style/normal_layout_attributes">


                <ImageView
                    style="@style/logo_style"
                    android:contentDescription="@string/logo_description"
                    android:src="@drawable/logo_wy_alpha" />


                <TextView
                    style="@style/better_world_style"
                    android:text="@string/building_better_worlds" />


            </LinearLayout>

            <View style="@style/header_blue_line_thin_bottom" />

        </RelativeLayout>


        <LinearLayout
            style="@style/transparency_layout_attributes"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin">

            <View style="@style/normal_blue_line_bold" />


            <View style="@style/normal_blue_line_thin" />


            <TextView
                style="@style/description_style"
                android:text="@string/header_line">


            </TextView>

            <TextView
                style="@style/normal_text_view_attributes"
                android:text="@string/description">


            </TextView>

            <View style="@style/normal_blue_line_thin_bottom" />


        </LinearLayout>


        <LinearLayout style="@style/data_text_style">


            <View style="@style/normal_blue_line_bold" />


            <View style="@style/normal_blue_line_thin" />


            <LinearLayout style="@style/transparency_layout_attributes">


                <TextView
                    style="@style/normal_text_view_attributes"
                    android:autoLink="map"
                    android:drawableLeft="@drawable/ic_room_white_36dp"
                    android:drawableStart="@drawable/ic_room_white_36dp"
                    android:text="@string/headquarters_names" />


                <View style="@style/normal_blue_line_thin" />


            </LinearLayout>


            <LinearLayout style="@style/transparency_layout_attributes">


                <TextView
                    style="@style/normal_text_view_attributes"
                    android:autoLink="web"
                    android:drawableLeft="@drawable/ic_web_white_36dp"
                    android:drawableStart="@drawable/ic_web_white_36dp"
                    android:text="@string/website_name" />


                <View style="@style/normal_blue_line_thin" />


            </LinearLayout>


            <LinearLayout style="@style/transparency_layout_attributes">


                <TextView
                    style="@style/normal_text_view_attributes"
                    android:autoLink="phone"
                    android:drawableLeft="@drawable/ic_call_white_36dp"
                    android:drawableStart="@drawable/ic_call_white_36dp"
                    android:text="@string/call_us" />

                <View style="@style/normal_blue_line_thin" />


            </LinearLayout>


            <LinearLayout style="@style/transparency_layout_attributes">


                <TextView
                    style="@style/normal_text_view_attributes"
                    android:autoLink="email"
                    android:drawableLeft="@drawable/ic_email_white_36dp"
                    android:drawableStart="@drawable/ic_email_white_36dp"
                    android:text="@string/email" />


                <View style="@style/normal_blue_line_thin_bottom" />


            </LinearLayout>


        </LinearLayout>

        <RelativeLayout style="@style/relative_layout_style">


            <ImageView
                style="@style/background_image_standard"
                android:contentDescription="@string/image_footer"
                android:src="@drawable/background7" />


            <View style="@style/footer_blue_line_bold" />

            <View style="@style/footer_blue_line_thin" />


            <LinearLayout
                style="@style/normal_layout_attributes"
                android:layout_centerInParent="true">


                <TextView
                    style="@style/footer_text_style_normal"
                    android:text="@string/interested_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />


                <Button
                    style="@style/button_style"
                    android:text="@string/join_us" />

                <TextView
                    style="@style/footer_text_style_header"
                    android:text="@string/project_prometheus"
                    android:textAllCaps="true"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/header_text_size" />


            </LinearLayout>

            <View
                style="@style/normal_blue_line_thin"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>